[gd_scene load_steps=9 format=3 uid="uid://dbi7lwvxylslm"]

[ext_resource type="Script" uid="uid://otr7t11p7y1t" path="res://enemy/octopus/octopus.gd" id="1_a2w43"]
[ext_resource type="Texture2D" uid="uid://54l4wxf15kds" path="res://enemy/octopus/Frame 12 (2).png" id="1_i3uts"]

[sub_resource type="Animation" id="Animation_ldgku"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_5yj8x"]
resource_name = "appear"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}

[sub_resource type="Animation" id="Animation_a2w43"]
resource_name = "attack"
length = 1.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="Animation" id="Animation_22v48"]
resource_name = "idle"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vaoer"]
_data = {
&"RESET": SubResource("Animation_ldgku"),
&"appear": SubResource("Animation_5yj8x"),
&"attack": SubResource("Animation_a2w43"),
&"idle": SubResource("Animation_22v48")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a2w43"]
size = Vector2(1121, 230)

[node name="Octopus" type="CharacterBody2D"]
script = ExtResource("1_a2w43")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -540)
texture = ExtResource("1_i3uts")
hframes = 6
vframes = 3
frame = 13

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_vaoer")
}
autoplay = "appear"

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -105)
shape = SubResource("RectangleShape2D_a2w43")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
